third_party/rust/chromium_crates_io/vendor/cxx-1.0.130/tests/ui/unsupported_elided.stderr
error[E0726]: implicit elided lifetime not allowed here
 --> tests/ui/unsupported_elided.rs:6:14
  |
6 |         type T;
  |              ^ expected lifetime parameter
  |
help: indicate the anonymous lifetime
  |
6 |         type T<'_>;
  |               ++++

error[E0106]: missing lifetime specifier
 --> tests/ui/unsupported_elided.rs:8:24
  |
8 |         fn f(t: &T) -> &str;
  |                 --     ^ expected named lifetime parameter
  |
  = help: this function's return type contains a borrowed value, but the signature does not say which one of `t`'s 2 lifetimes it is borrowed from
help: consider introducing a named lifetime parameter
  |
8 |         fn f<'a>(t: &'a T<'a>) -> &'a str;
  |             ++++     ++  ++++      ++
